# pydevman

./: .gitignore  README.md  main.py  pyproject.toml
doc/: publish.md  pypi.md  script-publish.md
docs/superpowers/plans/: 2026-07-03-git-diff-stat.md
docs/superpowers/specs/: 2026-07-03-git-diff-stat-design.md
src/devman/: __init__.py  args.py
src/devman/algo/: linklist.py  lru.py  tree.py  unionfind.py
src/devman/file/: __main__.py  common.py  copy.py  delete.py  dir-copy-struct.py  dir-copy.py  dir-delete.py  dir-move.py  iter.py  move.py  stat.py
src/devman/helper/: cache.py  interactive.py  intereaction.py  iter.py  query.py
src/devman/json/: __main__.py  api.py  core.py
src/devman/pypiutils/: readme.md
src/pydevman/: __main__.py  app_gui_tkinter.py  args.py  echo.py  log.py
src/pydevman/algo/: sorted_key_dict.py
src/pydevman/cli/: args.py  encode_cmd.py  file_cmd.py  git_cmd.py  json_cmd.py  table.py
src/pydevman/common/: result.py
src/pydevman/config/: core.py
src/pydevman/csv/: core.py  gui.py  (+1 more)
tests/: test_merge.py
tests/algo/: test_linklist.py  test_lru.py  test_sorted_key_dict.py  test_tree.py
tests/common/: test_sorted_key_dict.py
tests/config/: config.toml  env.config.toml  settings.default.toml  settings.dev.toml  test_config.py
tests/db/: test_db.py
tests/decorator/: test_common.py
tests/file/: config.ini  config.json  config.toml  config.yaml  test_load.py  test_stat.py
tests/git/: test_diff.py
tests/http/: json_api.http
tests/json/: test_api.py  test_handler.py
tests/string/: test_match.py  test_rule.py
(+62 files in other folders)
