[project]
name = "pydevman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.5",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# pytest -v 表示详细模式
addopts = "-v"
