[project]
name = "pydevman"
version = "0.1.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "inquirer>=3.4.0",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "pydantic>=2.12.5",
    "pyperclip>=1.11.0",
    "requests>=2.32.5",
    "send2trash>=1.8.3",
    "sqlalchemy>=2.0.44",
    "tinydb>=4.8.2",
    "tomli>=2.3.0",
    "typer>=0.20.0",
    "gitpython>=3.1",
]

[project.scripts]
# uv run python -m pydevman 是去 .venv 中的三方库查找
# uv run pydevman
pydevman = "pydevman.__main__:main"
# uv run pydevman-gui
pydevman-gui = "pydevman.gui.__main__:main"

[dependency-groups]
dev = ["pytest>=8.4.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# pytest -v 表示详细模式
addopts = "-v"
[tool.uv]
package = true
